--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J.O. Agency Emails</title>
-    <style>
+        <style>
         body {
             margin: 0;
             font-family: Helvetica, sans-serif;
@@ -23,6 +23,7 @@
         h1 {
             font-size: 32px;
             font-weight: bold;
+            margin-bottom: 40px;
         }
 
         .preview {
@@ -34,16 +35,18 @@
             border: 1px solid #ddd;
             background-color: white;
             width: 80%;
-            max-width: 900px;
+            max-width: 600px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
 
         .preview iframe {
             width: 100%;
-            height: 600px;
+            height: 500px; /* Fixed height for email content */
             border: none;
-            margin-bottom: 20px;
+            overflow-y: hidden; /* Prevents vertical scrolling */
+            overflow-x: hidden; /* Hides horizontal overflow */
+            box-sizing: border-box; /* Includes padding in width */
         }
 
         .preview button {
@@ -62,7 +65,7 @@
 
         @media (max-width: 768px) {
             .preview iframe {
-                height: 300px;
+                height: 300px; /* Adjust height for smaller screens */
             }
         }
     </style>
