--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <iframe src="F1-ITTracker.html"></iframe>
             
             <!-- Button to go to the full page -->
-            <button onclick="window.location.href='https://your-email-full-page-url.com'">
+            <button onclick="window.location.href='F1-ITTracker.html'">
                 View Full Email
             </button>
             
