--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container">
         <h1>J.O. Agency Emails</h1>
         
-        <div>
+        <div class="preview">
                <button onclick="window.location.href='https://samuelsosa.net/'">
                 Back To Portfolio 
                </button>
