--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 
         .preview iframe {
             width: 100%;
-            height: 500px; /* Fixed height for email content */
+            height: 600px; /* Fixed height for email content */
             border: none;
-            overflow-y: hidden; /* Prevents vertical scrolling */
-            overflow-x: hidden; /* Hides horizontal overflow */
+            overflow: hidden; /* Prevents vertical scrolling */
             box-sizing: border-box; /* Includes padding in width */
         }
 
