--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
         
         <div class="preview">
             <div class="button-container">
-         	<button onclick="window.location.href='https://samuelsosa.net/'">
+         	<button onclick="window.location.href='https://samuelsosa.net/'" target="_blank">
                 Back to Portfolio
             </button>
             
-            <button onclick="window.location.href='https://github.com/Sammy-Sosa/sammydoeshtml.github.io'">
+            <button onclick="window.location.href='https://github.com/Sammy-Sosa/sammydoeshtml.github.io'" target="_blank">
                 Github Repository
             </button>
             </div>
          </div>
-         <p style="color:#b7b7b7; padding-top:10px; padding-bottom:20px;"><a href="https://samuelsosa.net/" class="no-link-style">samuelsosa.net</a></p>
+         <p style="color:#b7b7b7; padding-top:10px; padding-bottom:20px;"><a href="https://samuelsosa.net/" class="no-link-style" target="_blank">samuelsosa.net</a></p>
     </div>
 
 </body>
