--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
 
         .preview iframe {
-            width: 100%;
+            width: auto;
             height: 600px; /* Fixed height for email content */
             border: none;
             overflow: hidden; /* Prevents vertical scrolling */
