--- a/F1-ITTracker.html
+++ b/F1-ITTracker.html
@@ -18,6 +18,10 @@
             margin: 0 auto;
             background-color: #ffffff;
             border: 1px solid #dddddd;
+            padding: 20px; /* Add padding for spacing */
+            box-sizing: border-box; /* Include padding and border in the width calculation */
+            height: auto; /* Allow height to adjust based on content */
+            overflow: hidden; /* Prevent scrolling */
         }
         .header, .footer {
             padding: 20px;
