--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             }
         }
     </style>
+    <script>
+        function resizeIframe(obj) {
+            obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+        }
+    </script>
 </head>
 <body>
 
