--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
     </style>
     <script>
         function resizeIframe(obj) {
-            obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-        }
+    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px'; // Adjusts height
+    obj.style.width = obj.contentWindow.document.body.scrollWidth + 'px'; // Adjusts width
+}
     </script>
 </head>
 <body>
