--- a/F1-ITTracker.html
+++ b/F1-ITTracker.html
@@ -14,7 +14,7 @@
         }
         .container {
             width: 100%;
-            max-width: 600px;
+            max-width: auto;
             margin: 0 auto;
             background-color: #ffffff;
             border: 1px solid #dddddd;
