--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            width: 1200px
             padding: 20px;
         }
         
