--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            width: 1200px
             padding: 20px;
+            width: 90%; /* Adjusted width */
+            max-width: 1200px; /* Increased max width */
         }
         
         .button-container {
