--- a/F1-ITTracker.html
+++ b/F1-ITTracker.html
@@ -14,18 +14,15 @@
         }
         .container {
             width: 100%;
-            max-width: auto;
+            max-width: 600px;
             margin: 0 auto;
             background-color: #ffffff;
             border: 1px solid #dddddd;
-            padding: 20px; /* Add padding for spacing */
-            box-sizing: border-box; /* Include padding and border in the width calculation */
-            overflow: hidden; /* Prevent scrolling */
         }
         .header, .footer {
             padding: 20px;
             text-align: center;
-            background-color: #b7b7b7; /* Corrected hex color code */
+            background-color: b7b7b7;
             color: #ffffff;
         }
         .content {
@@ -39,57 +36,63 @@
         }
         .button {
             display: inline-block;
-            padding: 30px 60px;
+            padding:  30px 60px;
             background-color: #1c98d5;
             color: #ffffff;
             text-decoration: none;
-            text-transform: uppercase;
-            font-weight: 700;
-            line-height: normal;
+            text-transform:uppercase;
+            font-weight:700;
+            line-height:normal;
         }
     </style>
 </head>
 <body>
 
-    <!-- Outer wrapper table to create a margin effect -->
-    <table width="100%" cellpadding="0" cellspacing="0" style="background-color: #f4f4f4; padding: 20px;">
-        <tr>
-            <td align="center">
-                <!-- Inner wrapper table for email content -->
-                <table width="600" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border: 1px solid #dddddd;">
-                    <tr>
-                        <td class="container">
-                            <p><a href="https://joagency.com/" style="color: #3498db; text-decoration: underline;" target="_blank"><img align="center" alt="Logo" src="https://i.postimg.cc/1XjkbrVs/Logo.png" style="border: none; max-width: 100%;" /></a></p>
-                            <p><a href="https://joagency.com/" style="color: #3498db; text-decoration: underline;" target="_blank"><img align="center" alt="Logo" class="centered-image" src="https://i.postimg.cc/VLYhYTWv/Waiting.png" style="border: none; max-width: 100%;" /></a></p>
+    <body style="margin: 0; padding: 0; background-color: #f0f0f0;">
 
-                            <p style="text-align:center; font-family: Helvetica, sans-serif; font-size: 50px; margin: 10px 0 40px; background-color: #003349; padding: 25px; color: #ffffff;"><b>Pending Closure</b></p>
-
-                            <p style="font-family: Helvetica, sans-serif; font-size: 25px; color: #003349;">We are waiting on a response from you about ticket <br><b>#[srnumber]</b>. <br><br>If there is no response within 24 hours, the ticket will be closed. <br><br><b>Please make sure you click “reply to all” in your email so that we get the email correctly.</b></p>
-
-                            <p style="font-family: Helvetica, sans-serif; font-size: 20px; background-color: #1b98d5; padding: 15px; color: #ffffff; text-align:center;"> &darr; TICKET NUMBER & JOB STATUS &darr;</p>
-                            <p style="font-family: Helvetica, sans-serif; font-size: 25px; color: #003349;">Details</p>
-                        </td>
-                    </tr>
-                </table>
-
-                <div class="footer" style="clear: both; margin-top: 20px; text-align: center; width: 100%;">
-                    <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; width: 100%; margin-top: 20px;">
+        <!-- Outer wrapper table to create a margin effect -->
+        <table width="100%" cellpadding="0" cellspacing="0" style="background-color: #b7b7b7; padding: 20px;">
+            <tr>
+                <td align="center">
+                    <!-- Inner wrapper table for email content -->
+                    <table width="700" cellpadding="20" cellspacing="0"  style="background-color: #ffffff;">
                         <tr>
-                            <td class="content-block" style="font-family: Helvetica, sans-serif; color: #ffffff; font-size: 16px; text-align: center;">
-                                <span class="apple-link" style="color: #ffffff;">TICKET NUMBER: 20</span><br> CURRENT JOB STATUS: ON-TIME
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="content-block powered-by" style="font-family: Helvetica, sans-serif; color: #ffffff; font-size: 16px; text-align: center; padding-bottom: 50px;">
-                                SUMMARY OF REQUEST: PWD CHANGE
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                            <td>
+    <tr>
+        <td class="wrapper" style="font-family: Helvetica, sans-serif; font-size: 16px; vertical-align: top; box-sizing: border-box; padding: 24px;" valign="top">
+          <p><a href="https://joagency.com/" style="color: #3498db; text-decoration: underline;" target="_blank"><img align="center" alt="Logo" src="https://i.postimg.cc/1XjkbrVs/Logo.png" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;" /></a></p>
+          <p><a href="https://joagency.com/" style="color: #3498db; text-decoration: underline;" target="_blank"><img align="center" alt="Logo" class="centered-image" src="https://i.postimg.cc/VvFHqBmz/Start.png" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; " /></a></p>
 
+
+<p style="text-align:center; font-family: Helvetica, sans-serif; font-size:50px; margin-top:10px; margin-bottom:40px; background-color:#003349; padding: 25px; color:#ffffff;"><b>Your request is now  <br>in process.<br></b> </p>
+
+          <p style="font-family: Helvetica, sans-serif; font-size: 25px; font-weight: normal; margin-bottom:0px; color:#003349;"> This email is to notify you that your request has been received and a ticket has been opened. <br><br><b>If you&apos;d like to check in sooner, reply to this email or call us at 817-336-3148.</b>
+          </p>
+
+          <p style="font-family: Helvetica, sans-serif; font-size: 20px; font-weight: normal; margin: 0; margin-bottom: 16px; margin-top:20px ; background-color:#1b98d5; padding: 15px; color:#ffffff; text-align:center;"> &darr; TICKET NUMBER & JOB STATUS &darr;
+          </p>
+          <p style="font-family: Helvetica, sans-serif; font-size: 25px; font-weight: normal; margin-bottom:20px; padding-left:5px; color:#003349;" >Ticket Number: #[srnumber]<br><br>Current Job Status: [srstatus]<br><br>Summary of Request: [srsummary] </p>
+        </td>
+      </tr>
+
+      <div class="footer" style="clear: both; margin-top:20px; text-align: center; width: 100%;">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; margin-top:20px;" width="100%">
+          <tr>
+            <td class="content-block powered-by" style="font-family: Helvetica, sans-serif; vertical-align: top; color: #ffffff; font-size: 16px; text-align: center; padding-bottom:50px; padding-top:20px;" valign="top" align="center">
+              THIS NOTIFICATION WAS CREATED BY F1 Information Technologies, Inc. <br><br>HELP DESK SUPPORT TEAM
+If you have any questions or wish to update information<br>related to this ticket simply reply to this email or call the support desk directly at <br><br><b>817.336.3148</b>
+Copyright © 2012 F1 Information Technologies, Inc.
             </td>
-        </tr>
-    </table>
+          </tr>
+        </table>
+      </div>
+
+    </td>
+</tr>
+</table>
+</td>
+</tr>
+</table>
 
 </body>
 </html>
