--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <!-- Email preview iframe -->
         
         
-        <div class="preview">
-            <div class="button-container">
+        <div class="preview" style="margin-bottom:20px;>
+            <div class="button-container" >
          	<button onclick="window.location.href='https://samuelsosa.net/'" target="_blank">
                 Back to Portfolio
             </button>
